# coordinated-assignment-education

./: .env  .gitignore  README.md  openai_functions.py  pdf_utilities.py  process_pdf_ccas.py  pyproject.toml  requirements.txt  rl_api_client.py  supabase_client.py  supabase_queries.py  test.py
ccas/: __init__.py  paths.py
ccas/cities/: __init__.py  run_city_research.py
ccas/db/: __init__.py  queries.py  rl_api_client.py  supabase_client.py
ccas/papers/: __init__.py  academic_pdf.py  assign_scholar_ids.py  main_paper_extract.py  match_city_ids.py  openai_func.py  pdf_func.py  prompt_gen.py
ccas/relevance/: __init__.py  fetch_abstracts.py  performance_eval.py  predict_performance.py  run_performance_pipeline.py  train_performance_predictor.py
deep_research/: .env  ccas_city_v2.csv  country_cities.csv  country_data.csv  db_process.sql  main.py  main_deep_research.py  prompt_gen.py  requirements.txt
deep_research/output/: db_process.sql
paper/: dbx_functions.py  openai_functions.py  process_pdf_ccas.py  test_ccas_extraction.py  text_process.py
paper/output/: ccas_extraction_summary.csv  combined_analysis_results.json  combined_ccas_summary.csv  combined_metadata_summary.csv  paper_list.csv
paper_extract/: PERFORMANCE_PIPELINE_README.md  assign_scholar_ids.py  dropbox_func.py  fetch_abstracts.py  main_paper_extract.py  match_city_ids.py  notes.txt  openai_func.py  pdf_func.py  performance_eval.py  predict_performance.py  prompt_gen.py  run_performance_pipeline.py  train_performance_predictor.py
sql/: rl_schema.sql
(+2 files in other folders)
